# Crossy-Road-LI1

./: 2022li1g067.cabal  README.md
doc/html/: Main.html  Tarefa1_2022li1g067.html  Tarefa2_2022li1g067.html  Tarefa3_2022li1g067.html  Tarefa4_2022li1g067.html  Tarefa5_2022li1g067.html  doc-index.html  index.html
src/: LI12223.hs  Main.hs  Tarefa1_2022li1g067.hs  Tarefa2_2022li1g067.hs  Tarefa3_2022li1g067.hs  Tarefa4_2022li1g067.hs  Tarefa5_2022li1g067.hs
tests/: Spec.hs  Tarefa1_2022li1g067_Spec.hs  Tarefa2_2022li1g067_Spec.hs  Tarefa3_2022li1g067_Spec.hs  Tarefa4_2022li1g067_Spec.hs  Tarefa5_2022li1g067_Spec.hs
